@@ -1,6 +1,11 @@
+2007-05-17  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-ems.el (w3m-switch-to-buffer, w3m-subst-switch-to-buffer-keys):
+	Remove.
+
 2007-05-17  Hideyuki SHIRAI  <shirai@meadowy.org>
 
-	* w3m.el (w3m-expand-url): Guard error in aref when url is "". 
+	* w3m.el (w3m-expand-url): Guard error in aref when url is "".
 
 2007-05-16  Naohiro Aota  <nao.aota@gmail.com>
 
